app/src/db/repositories/wort_audio/snapshots/anki_sentences__db__repositories__wort_audio__wort_audio_test__test_wort_audio_repo__bulk_upsert__[WortAudioRepo::bulk_upsert] - insert.snap
---
source: app/src/db/repositories/wort_audio/wort_audio_test.rs
expression: snapshot
---
[
    SnapshotWortAudio {
        wort_id: 1,
        audio_name_es: None,
        audio_name_de: Some(
            "audio_de_1",
        ),
        created_at: "<created_at>",
        deleted_at: None,
    },
    SnapshotWortAudio {
        wort_id: 2,
        audio_name_es: Some(
            "audio_es_2",
        ),
        audio_name_de: None,
        created_at: "<created_at>",
        deleted_at: None,
    },
    SnapshotWortAudio {
        wort_id: 3,
        audio_name_es: Some(
            "audio_es_3",
        ),
        audio_name_de: Some(
            "audio_de_3",
        ),
        created_at: "<created_at>",
        deleted_at: None,
    },
    SnapshotWortAudio {
        wort_id: 4,
        audio_name_es: None,
        audio_name_de: None,
        created_at: "<created_at>",
        deleted_at: None,
    },
]
